unpackaged/objects/PharmaProduct__c.object
<CustomObject>
    <fields>
        <fullName>Exp_date__c</fullName>
        <label>Exp date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mfg_date__c</fullName>
        <label>Mfg date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <type>TextArea</type>
    </fields>
    <label>PharmaProduct</label>
    <nameField>
        <label>Pharma Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PharmaProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>